[shenker/snakenbake] Replaced freetype-based text rendering code with matplotlib-based text rendering adapted from the gdstk documentation. It uses from_matplotlib_path and from_matplotlib_path_codes to convert matptlotlib Path objects to gdstk polygons. kwargs to enable text are renamed from text_ to label_, kwargs to adjust size are renamed from _text_size to _font_size. gdstk is imported as gdstk, instead of g.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -27,10 +27,23 @@
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
-    "%autoreload 2\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "import snakenbake as s\n",
     "import fov\n",
-    "import fluid"
+    "import fluid\n",
+    "import text\n",
+    "import geometry\n",
+    "import util"
    ]
   },
   {
@@ -150,7 +163,6 @@
     "%%time\n",
     "metadata = {}\n",
     "base_params = dict(\n",
-    "    label=False, # TODO!!!\n",
     "    design_func=s.snake,\n",
     "    dims=chip_dims,\n",
     "    split=8,\n",
@@ -179,13 +191,13 @@
     "        **base_params,\n",
     "        **dict(\n",
     "            design_func=s.manifold_snake,\n",
-    "            manifold_input_style=\"bend-in\",\n",
+    "            manifold_input_style=\"bend-out\",\n",
     "            split=None,\n",
     "            num_manifolds=1,\n",
     "            manifold_width=200,\n",
     "            manifold_input_margin=2e3,\n",
-    "            manifold_bend_margin=0.2e3,\n",
-    "            manifold_bend_radius=300,\n",
+    "            manifold_bend_margin=True,#0.2e3,\n",
+    "            manifold_bend_radius=0.1e3,\n",
     "            manifold_margin=100,\n",
     "            # feeding_channel_width=40,\n",
     "            # port_wayfinder_orientations=(\"right\", \"top\")#(\"right\", \"top\", \"bottom\"),\n",
@@ -276,10 +288,10 @@
     "alignment_mark_position = wafer_diameter / 2 - 0.2 * u.inch\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    text_right=\"Basilisk\\n JQS/DE/YG 230320\",\n",
-    "    text_left=wafer_manifest,\n",
+    "    label_right=\"Basilisk\\n JQS/DE/YG 230320\",\n",
+    "    label_left=wafer_manifest,\n",
     "    # TODO!!!\n",
-    "    text=False, #True,\n",
+    "    label=True,\n",
     "    mask=False,\n",
     "    chip_dims=chip_dims,\n",
     "    diameter=wafer_diameter.to(u.um).magnitude,\n",
@@ -309,6 +321,15 @@
    "outputs": [],
    "source": [
     "{k: v[\"num_trenches\"] for k, v in metadata.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bend-in: 1685760"
    ]
   },
   {
@@ -372,6 +393,234 @@
    "outputs": [],
    "source": [
     "grid_df.loc[pd.IndexSlice[:, [\"iris 20x\", \"bsi 20x\"]], :].round(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Text test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "text.text(\"foo\", 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "a = c.get_polygons()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "c = text.Text(\"foo\", 12)\n",
+    "#c = gdstk.rectangle((0,0),(1,2))\n",
+    "util.show(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from matplotlib.font_manager import FontProperties\n",
+    "from matplotlib.textpath import TextPath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "path = TextPath((0,0), \"\\na\", size=12, prop=fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "x = text.TextToPath()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "x.get_text_width_height_descent(\"lp\", fp, False)[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "path.codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "util.show(geometry.from_matplotlib_path(path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fp = FontProperties(family=\"DejaVu Serif\", style=\"italic\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fp.get_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp = FontProperties(family=\"serif\", style=\"italic\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fp = FontProperties(family=\"serif\", style=\"italic\", size=120)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "gdstk.Polygon?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "FontProperties?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "polys = text.text(\"foo2 blah\\nfoo3 blah\\nfoo4 blah\", 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "polys = s.text(\"foo2 blah\\nfoo3 blah\\nfoo4 blah\", 4, alignment=\"center\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "util.show(polys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "a = polys[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "polys[3].cell.name"
    ]
   },
   {
