[shenker/snakenbake] Refactored manifold code, moved into _manifold.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -165,7 +165,6 @@
     "base_params = dict(\n",
     "    design_func=s.snake,\n",
     "    dims=chip_dims,\n",
-    "    split=8,\n",
     "    gap_lanes=0,\n",
     "    trench_length=35,\n",
     "    feeding_channel_width=80,\n",
@@ -192,8 +191,7 @@
     "        **dict(\n",
     "            design_func=s.manifold_snake,\n",
     "            manifold_input_style=\"bend-out\",\n",
-    "            split=None,\n",
-    "            num_manifolds=1,\n",
+    "            manifold_split=2,\n",
     "            manifold_width=200,\n",
     "            manifold_input_margin=2e3,\n",
     "            manifold_bend_margin=True,#0.2e3,\n",
@@ -209,39 +207,12 @@
     "    \"gap_lanes\",\n",
     ")\n",
     "\n",
-    "# dense_chip = dict(\n",
-    "#     manifold_input_style=\"u-turn\",\n",
-    "#     feeding_channel_width=30,\n",
-    "#     trench_length=30,\n",
-    "#     trench_gap=20,\n",
-    "#     lanes_per_snake=3,\n",
-    "#     trench_spacing=2.1,\n",
-    "# )\n",
     "dense_chip = dict(\n",
     "    feeding_channel_width=40,\n",
     "    trench_gap=20,\n",
     "    lanes_per_snake=3,\n",
     "    trench_spacing=2.1,\n",
     ")\n",
-    "# dense_chip2 = dict(\n",
-    "#     feeding_channel_width=35,\n",
-    "#     trench_gap=20,\n",
-    "#     lanes_per_snake=3,\n",
-    "#     trench_spacing=2.1,\n",
-    "# )\n",
-    "# workhorse = dict(\n",
-    "#     feeding_channel_width=90,\n",
-    "#     trench_gap=30,\n",
-    "#     lanes_per_snake=5,\n",
-    "#     trench_spacing=2.1,\n",
-    "# )\n",
-    "# workhorse_poormedia = dict(\n",
-    "#     feeding_channel_width=90,\n",
-    "#     trench_width=1.2,\n",
-    "#     trench_gap=30,\n",
-    "#     lanes_per_snake=5,\n",
-    "#     trench_spacing=2.1,\n",
-    "# )\n",
     "\n",
     "params = [dense_chip]*3 #[dense_chip, workhorse, workhorse, workhorse, workhorse_poormedia, dense_chip]\n",
     "params = [{**manifold_params, **p} for p in params]\n",
@@ -249,8 +220,8 @@
     "chip_names = [\n",
     "    \"Basilisk {ports} FC{feeding_channel_width} L{trench_length} W{trench_width} TS{trench_spacing}{reg} TG{trench_gap}\".format(\n",
     "        ports=f\"S{p['split']}\"\n",
-    "        if np.isscalar(p[\"split\"])\n",
-    "        else \"S{} LS{}\".format(p[\"num_manifolds\"], p[\"lanes_per_snake\"]),\n",
+    "        if \"split\" in p and np.isscalar(p[\"split\"])\n",
+    "        else \"S{} LS{}\".format(p[\"manifold_split\"], p[\"lanes_per_snake\"]),\n",
     "        reg=f\" M{p.get('mark_size')} ID{p.get('chip_id')}\"\n",
     "        if p.get(\"registration_mark_barcodes\")\n",
     "        else \"\",\n",
@@ -290,7 +261,6 @@
     "    chips,\n",
     "    label_right=\"Basilisk\\n JQS/DE/YG 230320\",\n",
     "    label_left=wafer_manifest,\n",
-    "    # TODO!!!\n",
     "    label=True,\n",
     "    mask=False,\n",
     "    chip_dims=chip_dims,\n",
