[shenker/snakenbake] manifold_snake now handles manifold_split kwarg. Still need to allow reusing the same manifold cell via translational and possibly rotational symmetry. registration_marks can now be True/"box" or "qr", to allow choosing style of registration mark.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -167,21 +167,17 @@
     "    dims=chip_dims,\n",
     "    gap_lanes=0,\n",
     "    trench_length=35,\n",
-    "    feeding_channel_width=80,\n",
-    "    #     horizontal_margin=2e3,\n",
+    "    feeding_channel_width=40,\n",
     "    trench_gap=20,\n",
-    "    trench_width=1.4,\n",
-    "    # trench_spacing=2.1,\n",
+    "    #trench_width=1.4,\n",
+    "    trench_spacing=2.1,\n",
     "    border_margin=0.5e3,\n",
-    "    port_margin=1e3,  # 0.6\n",
+    "    port_margin=1e3,\n",
     "    port_radius=750 / 2,\n",
     "    # port_radius=0,\n",
     "    port=False,\n",
-    "    registration_marks=True,\n",
+    "    registration_marks=\"qr\",\n",
     "    registration_mark_barcodes=False,\n",
-    "    #     chip_id=0,\n",
-    "    #     mark_size=2,\n",
-    "    #     mark_spacing=1.5,\n",
     "    trenches=True,\n",
     "    metadata=metadata,\n",
     ")\n",
@@ -190,31 +186,24 @@
     "        **base_params,\n",
     "        **dict(\n",
     "            design_func=s.manifold_snake,\n",
+    "            lanes_per_snake=3,\n",
     "            manifold_input_style=\"bend-out\",\n",
-    "            manifold_split=2,\n",
+    "            manifold_split=4,\n",
     "            manifold_width=200,\n",
     "            manifold_input_margin=2e3,\n",
     "            manifold_bend_margin=True,#0.2e3,\n",
     "            manifold_bend_radius=0.1e3,\n",
     "            manifold_margin=100,\n",
-    "            # feeding_channel_width=40,\n",
-    "            # port_wayfinder_orientations=(\"right\", \"top\")#(\"right\", \"top\", \"bottom\"),\n",
-    "            #             port_margin=0.5e3,\n",
-    "            # trench_spacing=2.1,\n",
     "        ),\n",
     "    },\n",
     "    \"horizontal_margin\",\n",
     "    \"gap_lanes\",\n",
     ")\n",
     "\n",
-    "dense_chip = dict(\n",
-    "    feeding_channel_width=40,\n",
-    "    trench_gap=20,\n",
-    "    lanes_per_snake=3,\n",
-    "    trench_spacing=2.1,\n",
-    ")\n",
+    "split_manifold_chip = dict(trench_width=1.4)\n",
+    "split_poor_manifold_chip = dict(trench_width=1.3)\n",
     "\n",
-    "params = [dense_chip]*3 #[dense_chip, workhorse, workhorse, workhorse, workhorse_poormedia, dense_chip]\n",
+    "params = [split_manifold_chip, split_manifold_chip, split_poor_manifold_chip]\n",
     "params = [{**manifold_params, **p} for p in params]\n",
     "# chip names\n",
     "chip_names = [\n",
@@ -290,6 +279,17 @@
    },
    "outputs": [],
    "source": [
+    "{k: v[\"trenches_per_input\"] for k, v in metadata.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "{k: v[\"num_trenches\"] for k, v in metadata.items()}"
    ]
   },
@@ -300,6 +300,17 @@
    "outputs": [],
    "source": [
     "# bend-in: 1685760"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "{k: v[\"lanes_per_input\"] for k, v in metadata.items()}"
    ]
   },
   {
@@ -364,241 +375,6 @@
    "source": [
     "grid_df.loc[pd.IndexSlice[:, [\"iris 20x\", \"bsi 20x\"]], :].round(2)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Text test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "text.text(\"foo\", 12)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "a = c.get_polygons()[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "c = text.Text(\"foo\", 12)\n",
-    "#c = gdstk.rectangle((0,0),(1,2))\n",
-    "util.show(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from matplotlib.font_manager import FontProperties\n",
-    "from matplotlib.textpath import TextPath"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "path = TextPath((0,0), \"\\na\", size=12, prop=fp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "x = text.TextToPath()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "x.get_text_width_height_descent(\"lp\", fp, False)[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "path.codes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "util.show(geometry.from_matplotlib_path(path))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fp = FontProperties(family=\"DejaVu Serif\", style=\"italic\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fp.get_name()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fp = FontProperties(family=\"serif\", style=\"italic\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fp = FontProperties(family=\"serif\", style=\"italic\", size=120)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "gdstk.Polygon?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "FontProperties?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "polys = text.text(\"foo2 blah\\nfoo3 blah\\nfoo4 blah\", 4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "polys = s.text(\"foo2 blah\\nfoo3 blah\\nfoo4 blah\", 4, alignment=\"center\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "util.show(polys)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "a = polys[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "polys[3].cell.name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
