[shenker/snakenbake] WIP use rotation/translation to repurpose the same manifold cell for multiple inputs and left/right side. This does not actually work because manifolds on right/left side are not in general symmetric.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -165,7 +165,6 @@
     "base_params = dict(\n",
     "    design_func=s.snake,\n",
     "    dims=chip_dims,\n",
-    "    gap_lanes=0,\n",
     "    trench_length=35,\n",
     "    feeding_channel_width=40,\n",
     "    trench_gap=20,\n",
@@ -181,8 +180,7 @@
     "    trenches=True,\n",
     "    metadata=metadata,\n",
     ")\n",
-    "manifold_params = dissoc(\n",
-    "    {\n",
+    "manifold_params = {\n",
     "        **base_params,\n",
     "        **dict(\n",
     "            design_func=s.manifold_snake,\n",
@@ -195,13 +193,11 @@
     "            manifold_bend_radius=0.1e3,\n",
     "            manifold_margin=100,\n",
     "        ),\n",
-    "    },\n",
-    "    \"horizontal_margin\",\n",
-    "    \"gap_lanes\",\n",
-    ")\n",
+    "    }\n",
     "\n",
     "split_manifold_chip = dict(trench_width=1.4)\n",
-    "split_poor_manifold_chip = dict(trench_width=1.3)\n",
+    "#split_poor_manifold_chip = dict(trench_width=1.3)\n",
+    "split_poor_manifold_chip = dict(trench_width=1.3, snake_split=np.array([3,3,3,5,7,9,11]), manifold_split=3, lanes_per_snake=None)\n",
     "\n",
     "params = [split_manifold_chip, split_manifold_chip, split_poor_manifold_chip]\n",
     "params = [{**manifold_params, **p} for p in params]\n",
