[shenker/snakenbake] Added a kwarg manifold_trench_params to manifold_snake which allows changing trench params (e.g., trench_width) on a per-manifold basis. This implementation can be straightforwardly extended to customize trench parameters on a per-lane basis or implement sampler chips with periodically-repeating heterogenous sequences of trench lengths/widths. Temporarily disabled FOV calculations which are broken. Also need to check that normal snakes still work.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -196,20 +196,20 @@
     "    }\n",
     "\n",
     "split_manifold_chip = dict(trench_width=1.4)\n",
-    "#split_poor_manifold_chip = dict(trench_width=1.3)\n",
-    "split_poor_manifold_chip = dict(trench_width=1.3, snake_split=np.array([3,3,3,5,7,9,11]), manifold_split=3, lanes_per_snake=None)\n",
+    "split_poor_manifold_chip = dict(manifold_trench_params=[dict(trench_width=10),dict(trench_width=1),dict(trench_width=5),dict(trench_width=1)])\n",
     "\n",
     "params = [split_manifold_chip, split_manifold_chip, split_poor_manifold_chip]\n",
     "params = [{**manifold_params, **p} for p in params]\n",
     "# chip names\n",
     "chip_names = [\n",
-    "    \"Basilisk {ports} FC{feeding_channel_width} L{trench_length} W{trench_width} TS{trench_spacing}{reg} TG{trench_gap}\".format(\n",
+    "    \"Basilisk {ports} FC{feeding_channel_width} L{trench_length} W{trench_width_} TS{trench_spacing}{reg} TG{trench_gap}\".format(\n",
     "        ports=f\"S{p['split']}\"\n",
     "        if \"split\" in p and np.isscalar(p[\"split\"])\n",
     "        else \"S{} LS{}\".format(p[\"manifold_split\"], p[\"lanes_per_snake\"]),\n",
     "        reg=f\" M{p.get('mark_size')} ID{p.get('chip_id')}\"\n",
     "        if p.get(\"registration_mark_barcodes\")\n",
     "        else \"\",\n",
+    "        trench_width_=p[\"trench_width\"] if \"trench_width\" in p else \"/\".join(set(str(d[\"trench_width\"]) for d in p[\"manifold_trench_params\"])),\n",
     "        **p,\n",
     "    )\n",
     "    for p in params\n",
@@ -217,27 +217,27 @@
     "# make chip cells\n",
     "chips = [s.chip(name, **p) for p, name in zip(params, chip_names)]\n",
     "# calculate FOV info and overlay FOVs on chip cells\n",
-    "grid_metadata = {}\n",
-    "draw_grid = False\n",
-    "for chip_name, chip in zip(chip_names, chips):\n",
-    "    chip_grid_metadata = fov.get_grid_metadata(fov_dims, metadata[chip_name])\n",
-    "    grid_metadata[chip_name] = chip_grid_metadata\n",
-    "    if draw_grid:\n",
-    "        fov.draw_grid_overlay(\n",
-    "            chip,\n",
-    "            metadata[chip_name],\n",
-    "            fov_dims,\n",
-    "            chip_grid_metadata,\n",
-    "            center_margins=True,\n",
-    "            rotate=True,\n",
-    "        )\n",
-    "grid_df = pd.concat(\n",
-    "    {\n",
-    "        k: pd.DataFrame(v.values()).set_index(\"fov_name\")\n",
-    "        for k, v in grid_metadata.items()\n",
-    "    },\n",
-    "    names=[\"chip\"],\n",
-    ")\n",
+    "# grid_metadata = {}\n",
+    "# draw_grid = False\n",
+    "# for chip_name, chip in zip(chip_names, chips):\n",
+    "#     chip_grid_metadata = fov.get_grid_metadata(fov_dims, metadata[chip_name])\n",
+    "#     grid_metadata[chip_name] = chip_grid_metadata\n",
+    "#     if draw_grid:\n",
+    "#         fov.draw_grid_overlay(\n",
+    "#             chip,\n",
+    "#             metadata[chip_name],\n",
+    "#             fov_dims,\n",
+    "#             chip_grid_metadata,\n",
+    "#             center_margins=True,\n",
+    "#             rotate=True,\n",
+    "#         )\n",
+    "# grid_df = pd.concat(\n",
+    "#     {\n",
+    "#         k: pd.DataFrame(v.values()).set_index(\"fov_name\")\n",
+    "#         for k, v in grid_metadata.items()\n",
+    "#     },\n",
+    "#     names=[\"chip\"],\n",
+    "# )\n",
     "# lay out wafer, output design\n",
     "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
     "wafer_diameter = 3 * u.inch\n",
