--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -12,7 +12,7 @@
     "import pandas as pd\n",
     "import gdstk\n",
     "import matplotlib.pyplot as plt\n",
-    "from cytoolz import dissoc\n",
+    "from cytoolz import unique\n",
     "\n",
     "%matplotlib inline\n",
     "from functools import partial"
@@ -128,9 +128,11 @@
    "outputs": [],
    "source": [
     "coverslip_dims = np.array([55e3, 24e3])\n",
-    "chip_dims = np.array([33e3, 18e3])\n",
-    "chip_dims0 = np.array([23e3, 13e3])\n",
-    "chip_dims1 = np.array([40e3, 22e3])"
+    "# chip_dims = np.array([33e3, 18e3])\n",
+    "chip_dims0 = np.array([33e3, 18e3])\n",
+    "# chip_dims0 = np.array([23e3, 13e3])\n",
+    "# chip_dims = np.array([38e3, 19e3])\n",
+    "chip_dims = np.array([35e3, 19e3])"
    ]
   },
   {
@@ -143,13 +145,26 @@
    "source": [
     "plt.figure(figsize=(10, 5))\n",
     "ax = plt.gca()\n",
-    "ax.add_patch(plt.Rectangle(-coverslip_dims / 2, *coverslip_dims, fill=False))\n",
+    "ax.add_patch(\n",
+    "    plt.Rectangle(-coverslip_dims / 2, *coverslip_dims, fill=False, color=\"red\", lw=2)\n",
+    ")\n",
     "ax.add_patch(plt.Rectangle(-chip_dims0 / 2, *chip_dims0, fill=False, ls=\"-.\"))\n",
     "# ax.add_patch(plt.Rectangle(-chip_dims1 / 2, *chip_dims1, fill=False, ls=\"--\"))\n",
-    "ax.add_patch(plt.Rectangle(-chip_dims / 2, *chip_dims, fill=False))\n",
+    "ax.add_patch(plt.Rectangle(-chip_dims / 2, *chip_dims, fill=False, lw=2))\n",
     "ax.set_xlim(-1.2 * coverslip_dims[0] / 2, 1.2 * coverslip_dims[0] / 2)\n",
     "ax.set_ylim(-1.2 * coverslip_dims[1] / 2, 1.2 * coverslip_dims[1] / 2)\n",
     "ax.set_aspect(\"equal\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "list(set([str(i) for i in reversed(range(10))]))"
    ]
   },
   {
@@ -168,7 +183,7 @@
     "    trench_length=35,\n",
     "    feeding_channel_width=40,\n",
     "    trench_gap=20,\n",
-    "    #trench_width=1.4,\n",
+    "    # trench_width=1.4,\n",
     "    trench_spacing=2.1,\n",
     "    border_margin=0.5e3,\n",
     "    port_margin=1e3,\n",
@@ -181,25 +196,43 @@
     "    metadata=metadata,\n",
     ")\n",
     "manifold_params = {\n",
-    "        **base_params,\n",
-    "        **dict(\n",
-    "            design_func=s.manifold_snake,\n",
-    "            lanes_per_snake=3,\n",
-    "            manifold_input_style=\"bend-out\",\n",
-    "            manifold_split=4,\n",
-    "            manifold_width=200,\n",
-    "            manifold_input_margin=2e3,\n",
-    "            manifold_bend_margin=True,#0.2e3,\n",
-    "            manifold_bend_radius=0.1e3,\n",
-    "            manifold_margin=100,\n",
-    "        ),\n",
-    "    }\n",
+    "    **base_params,\n",
+    "    **dict(\n",
+    "        design_func=s.manifold_snake,\n",
+    "        lanes_per_snake=3,\n",
+    "        manifold_input_style=\"bend-out\",\n",
+    "        manifold_split=4,\n",
+    "        manifold_width=200,\n",
+    "        manifold_input_margin=2e3,\n",
+    "        manifold_bend_margin=True,  # 0.2e3,\n",
+    "        manifold_bend_radius=0.1e3,\n",
+    "        manifold_margin=100,\n",
+    "    ),\n",
+    "}\n",
     "\n",
+    "wafer_id = 1\n",
     "split_manifold_chip = dict(trench_width=1.4)\n",
-    "split_poor_manifold_chip = dict(manifold_trench_params=[dict(trench_width=10),dict(trench_width=1),dict(trench_width=5),dict(trench_width=1)])\n",
+    "split_poor_manifold_chip = dict(\n",
+    "    manifold_trench_params=[\n",
+    "        dict(trench_width=1.4),\n",
+    "        dict(trench_width=1.4),\n",
+    "        dict(trench_width=1.3),\n",
+    "        dict(trench_width=1.3),\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "params = [split_manifold_chip, split_manifold_chip, split_poor_manifold_chip]\n",
-    "params = [{**manifold_params, **p} for p in params]\n",
+    "params = [\n",
+    "    {\n",
+    "        **manifold_params,\n",
+    "        **p,\n",
+    "        \"ur_corner_label\": f\"{wafer_id}.{chip_id}\",\n",
+    "        \"ul_corner_label\": \"ul\",\n",
+    "        \"lr_corner_label\": \"lr\",\n",
+    "        \"ll_corner_label\": \"ll\",\n",
+    "    }\n",
+    "    for chip_id, p in enumerate(params, 1)\n",
+    "]\n",
     "# chip names\n",
     "chip_names = [\n",
     "    \"Basilisk {ports} FC{feeding_channel_width} L{trench_length} W{trench_width_} TS{trench_spacing}{reg} TG{trench_gap}\".format(\n",
@@ -209,7 +242,11 @@
     "        reg=f\" M{p.get('mark_size')} ID{p.get('chip_id')}\"\n",
     "        if p.get(\"registration_mark_barcodes\")\n",
     "        else \"\",\n",
-    "        trench_width_=p[\"trench_width\"] if \"trench_width\" in p else \"/\".join(set(str(d[\"trench_width\"]) for d in p[\"manifold_trench_params\"])),\n",
+    "        trench_width_=p[\"trench_width\"]\n",
+    "        if \"trench_width\" in p\n",
+    "        else \"/\".join(\n",
+    "            unique([str(d[\"trench_width\"]) for d in p[\"manifold_trench_params\"]])\n",
+    "        ),\n",
     "        **p,\n",
     "    )\n",
     "    for p in params\n",
@@ -292,7 +329,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# bend-in: 1685760"
