[shenker/snakenbake] Fixed wayfinder orientation, this had been broken for a while. Did not test on non-manifold snakes.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Basilisk.ipynb
@@ -202,7 +202,7 @@
     "        lanes_per_snake=3,\n",
     "        manifold_input_style=\"bend-out\",\n",
     "        manifold_split=4,\n",
-    "        manifold_width=200,\n",
+    "        manifold_width=50,#200,\n",
     "        manifold_input_margin=2e3,\n",
     "        manifold_bend_margin=True,  # 0.2e3,\n",
     "        manifold_bend_radius=0.1e3,\n",
@@ -214,10 +214,10 @@
     "split_manifold_chip = dict(trench_width=1.4)\n",
     "split_poor_manifold_chip = dict(\n",
     "    manifold_trench_params=[\n",
-    "        dict(trench_width=1.4),\n",
-    "        dict(trench_width=1.4),\n",
     "        dict(trench_width=1.3),\n",
     "        dict(trench_width=1.3),\n",
+    "        dict(trench_width=1.5),\n",
+    "        dict(trench_width=1.5),\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -227,9 +227,6 @@
     "        **manifold_params,\n",
     "        **p,\n",
     "        \"ur_corner_label\": f\"{wafer_id}.{chip_id}\",\n",
-    "        \"ul_corner_label\": \"ul\",\n",
-    "        \"lr_corner_label\": \"lr\",\n",
-    "        \"ll_corner_label\": \"ll\",\n",
     "    }\n",
     "    for chip_id, p in enumerate(params, 1)\n",
     "]\n",
@@ -281,7 +278,7 @@
     "alignment_mark_position = wafer_diameter / 2 - 0.2 * u.inch\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    label_right=\"Basilisk\\n JQS/DE/YG 230320\",\n",
+    "    label_right=\"Basilisk\\n JQS/DE/YG 230323\",\n",
     "    label_left=wafer_manifest,\n",
     "    label=True,\n",
     "    mask=False,\n",
@@ -290,7 +287,7 @@
     "    alignment_mark_position=alignment_mark_position.to(u.um).magnitude,\n",
     ")\n",
     "MAX_POINTS = 2000  # LayoutEditor uses 8191, gdstk default is 199\n",
-    "s.write_gds(main_cell, \"designs/230320basilisk.gds\", max_points=MAX_POINTS)"
+    "s.write_gds(main_cell, \"designs/230323basilisk.gds\", max_points=MAX_POINTS)"
    ]
   },
   {
