[shenker/snakenbake] WIP new fov calculation, visualization.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Basilisk.ipynb
@@ -56,7 +56,10 @@
    "source": [
     "import pint\n",
     "\n",
-    "u = pint._DEFAULT_REGISTRY"
+    "u = pint._DEFAULT_REGISTRY\n",
+    "\n",
+    "mu = 0.7 * u.cP  # dynamic viscosity\n",
+    "nu = mu / (1 * u.g / u.cm**3)  # kinematic viscosity"
    ]
   },
   {
@@ -68,7 +71,8 @@
    "outputs": [],
    "source": [
     "camera_dims = {\n",
-    "    \"iris\": (4.25, np.array([5056, 2960])),\n",
+    "    \"iris15\": (4.25, np.array([5056, 2960])),\n",
+    "    \"iris9\": (4.25, np.array([2960, 2960])),\n",
     "    \"bsi\": (6.5, np.array([2048, 2048])),\n",
     "}\n",
     "mags = (20, 40)\n",
@@ -86,27 +90,25 @@
    },
    "outputs": [],
    "source": [
-    "def print_flow_info(height, Q_per_snake, mu, nu, metadata):\n",
+    "def print_flow_info(height, flow_rate, mu, nu, metadata):\n",
     "    for name, md in metadata.items():\n",
     "        R_, extra = fluid.snake_resistance(\n",
     "            height, md, length_unit=u.um, return_extra=True\n",
     "        )\n",
     "        R = R_ * mu\n",
     "        # print('R', R.to(u.mbar * u.min / u.uL))\n",
-    "        delta_P = R * Q_per_snake\n",
+    "        delta_P = R * flow_rate\n",
     "        print(f\"{name}: {delta_P.to(u.bar)}\")\n",
-    "        if \"manifold_split\" in md:\n",
-    "            flow_rate = Q_per_snake * md[\"manifold_split\"]\n",
-    "        else:\n",
-    "            flow_rate = Q_per_snake\n",
-    "        print(f\"    flow rate: {flow_rate}\")\n",
+    "        print(\n",
+    "            f\"    flow rate: {flow_rate} ({flow_rate.to(u.milliliters/u.hour)}, {flow_rate.to(u.milliliters/u.day)})\"\n",
+    "        )\n",
     "        if \"flow_nonuniformity\" in extra:\n",
     "            print(f\"    flow nonuniformity: {extra['flow_nonuniformity']}\")\n",
     "        if \"manifold_width\" in md:\n",
     "            L_e = fluid.entrance_length(\n",
     "                height,\n",
     "                md[\"manifold_width\"] * u.um,\n",
-    "                Q_per_snake * md[\"manifold_split\"],\n",
+    "                flow_rate,\n",
     "                nu,\n",
     "            )\n",
     "            print(f\"    entrance length: {L_e}\")"
@@ -164,17 +166,6 @@
    },
    "outputs": [],
    "source": [
-    "list(set([str(i) for i in reversed(range(10))]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
     "%%time\n",
     "metadata = {}\n",
     "base_params = dict(\n",
@@ -185,6 +176,7 @@
     "    trench_gap=20,\n",
     "    # trench_width=1.4,\n",
     "    trench_spacing=2.1,\n",
+    "    trench_margin=0,\n",
     "    border_margin=0.5e3,\n",
     "    port_margin=1e3,\n",
     "    port_radius=750 / 2,\n",
@@ -202,8 +194,8 @@
     "        lanes_per_snake=3,\n",
     "        manifold_input_style=\"bend-out\",\n",
     "        manifold_split=4,\n",
-    "        manifold_width=50,#200,\n",
-    "        manifold_input_margin=2e3,\n",
+    "        manifold_width=50,\n",
+    "        manifold_input_margin=775,  # 2e3,\n",
     "        manifold_bend_margin=True,  # 0.2e3,\n",
     "        manifold_bend_radius=0.1e3,\n",
     "        manifold_margin=100,\n",
@@ -251,34 +243,36 @@
     "# make chip cells\n",
     "chips = [s.chip(name, **p) for p, name in zip(params, chip_names)]\n",
     "# calculate FOV info and overlay FOVs on chip cells\n",
-    "# grid_metadata = {}\n",
-    "# draw_grid = False\n",
-    "# for chip_name, chip in zip(chip_names, chips):\n",
-    "#     chip_grid_metadata = fov.get_grid_metadata(fov_dims, metadata[chip_name])\n",
-    "#     grid_metadata[chip_name] = chip_grid_metadata\n",
-    "#     if draw_grid:\n",
-    "#         fov.draw_grid_overlay(\n",
-    "#             chip,\n",
-    "#             metadata[chip_name],\n",
-    "#             fov_dims,\n",
-    "#             chip_grid_metadata,\n",
-    "#             center_margins=True,\n",
-    "#             rotate=True,\n",
-    "#         )\n",
-    "# grid_df = pd.concat(\n",
-    "#     {\n",
-    "#         k: pd.DataFrame(v.values()).set_index(\"fov_name\")\n",
-    "#         for k, v in grid_metadata.items()\n",
-    "#     },\n",
-    "#     names=[\"chip\"],\n",
-    "# )\n",
+    "grid_metadata = {}\n",
+    "draw_grid = True\n",
+    "for chip_name, chip in zip(chip_names, chips):\n",
+    "    chip_grid_metadata = fov.get_grid_metadata(\n",
+    "        fov_dims, metadata[chip_name], skip_first=True\n",
+    "    )\n",
+    "    grid_metadata[chip_name] = chip_grid_metadata\n",
+    "    if draw_grid:\n",
+    "        fov.draw_grid_overlay(\n",
+    "            chip,\n",
+    "            metadata[chip_name],\n",
+    "            fov_dims,\n",
+    "            chip_grid_metadata,\n",
+    "            center_margins=False,\n",
+    "            rotate=False,\n",
+    "        )\n",
+    "grid_df = pd.concat(\n",
+    "    {\n",
+    "        k: pd.DataFrame(v.values()).set_index(\"fov_name\")\n",
+    "        for k, v in grid_metadata.items()\n",
+    "    },\n",
+    "    names=[\"chip\"],\n",
+    ")\n",
     "# lay out wafer, output design\n",
     "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
     "wafer_diameter = 3 * u.inch\n",
     "alignment_mark_position = wafer_diameter / 2 - 0.2 * u.inch\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    label_right=\"Basilisk\\n JQS/DE/YG 230323\",\n",
+    "    label_right=\"Basilisk\\n JQS/DE/YG 230327\",\n",
     "    label_left=wafer_manifest,\n",
     "    label=True,\n",
     "    mask=False,\n",
@@ -287,7 +281,7 @@
     "    alignment_mark_position=alignment_mark_position.to(u.um).magnitude,\n",
     ")\n",
     "MAX_POINTS = 2000  # LayoutEditor uses 8191, gdstk default is 199\n",
-    "s.write_gds(main_cell, \"designs/230323basilisk.gds\", max_points=MAX_POINTS)"
+    "s.write_gds(main_cell, \"designs/230327basilisk.gds\", max_points=MAX_POINTS)"
    ]
   },
   {
@@ -331,17 +325,6 @@
    },
    "outputs": [],
    "source": [
-    "# bend-in: 1685760"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
     "{k: v[\"lanes_per_input\"] for k, v in metadata.items()}"
    ]
   },
@@ -364,11 +347,10 @@
    },
    "outputs": [],
    "source": [
-    "Q_per_snake = 20 * u.uL / u.min\n",
-    "height = 75 * u.um\n",
-    "mu = 0.7 * u.cP  # dynamic viscosity\n",
-    "nu = mu / (1 * u.g / u.cm**3)  # kinematic viscosity\n",
-    "print_flow_info(height, Q_per_snake, mu, nu, metadata)"
+    "# Q = 300 * u.uL / u.min\n",
+    "Q = 75 * u.uL / u.min\n",
+    "height = 70 * u.um\n",
+    "print_flow_info(height, Q, mu, nu, metadata)"
    ]
   },
   {
@@ -379,11 +361,38 @@
    },
    "outputs": [],
    "source": [
-    "Q_per_snake = 20 * u.uL / u.min\n",
-    "height = 40 * u.um\n",
-    "mu = 0.7 * u.cP  # dynamic viscosity\n",
-    "nu = mu / (1 * u.g / u.cm**3)  # kinematic viscosity\n",
-    "print_flow_info(height, Q_per_snake, mu, nu, metadata)"
+    "grid_df.loc[pd.IndexSlice[:, [\"iris15 20x\", \"iris9 20x\", \"bsi 40x\"]], :].round(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fluids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FOVs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# skip_first -> offset_active_regions = 0, -1, +1 (in draw_fov_grid)\n",
+    "# give offset sequence for each graph cycle and each offset_active_regions"
    ]
   },
   {
@@ -394,7 +403,13 @@
    },
    "outputs": [],
    "source": [
-    "grid_df.loc[pd.IndexSlice[:, [\"iris 40x\", \"bsi 40x\"]], :].round(2)"
+    "# active, inactive, active, inactive...\n",
+    "trench_length = 35\n",
+    "feeding_channel_width = 40\n",
+    "trench_gap = 20\n",
+    "region_lengths = [trench_length, feeding_channel_width, trench_length, trench_gap]\n",
+    "num_regions = len(region_lengths)\n",
+    "fov = fov_dims[\"iris15 20x\"][1]"
    ]
   },
   {
@@ -405,7 +420,148 @@
    },
    "outputs": [],
    "source": [
-    "grid_df.loc[pd.IndexSlice[:, [\"iris 20x\", \"bsi 20x\"]], :].round(2)"
+    "def next_transition(x0, region_lengths):\n",
+    "    num_regions = len(region_lengths)\n",
+    "    total_length = sum(region_lengths)\n",
+    "    x0_wraparound, x0 = divmod(x0, total_length)\n",
+    "    x = 0\n",
+    "    region = 0\n",
+    "    while True:\n",
+    "        x += region_lengths[region]\n",
+    "        if x > x0:\n",
+    "            return x + x0_wraparound * total_length, region\n",
+    "        region = (region + 1) % num_regions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "2960 * 4.25 / 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "next_transition(35, region_lengths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def fov_positions(fov_height, region_lengths):\n",
+    "    total_length = sum(region_lengths)\n",
+    "    configs = []\n",
+    "    x = 0\n",
+    "    while x < total_length:\n",
+    "        new_top, top_idx = next_transition(x, region_lengths)\n",
+    "        new_bottom, bottom_idx = next_transition(x + fov_height, region_lengths)\n",
+    "        top_margin = new_top - x\n",
+    "        bottom_margin = new_bottom - (x + fov_height)\n",
+    "        if top_idx % 2 == 1 and bottom_idx % 2 == 1:\n",
+    "            configs.append(\n",
+    "                {\n",
+    "                    \"top\": x,\n",
+    "                    \"bottom\": x + fov_height,\n",
+    "                    \"top_margin\": top_margin,\n",
+    "                    \"bottom_margin\": bottom_margin,\n",
+    "                }\n",
+    "            )\n",
+    "        if top_margin < bottom_margin:\n",
+    "            x = new_top\n",
+    "        else:\n",
+    "            x = new_bottom - fov_height\n",
+    "    return configs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "(370 + 20) % total_length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "repeats = int((2 * fov) // total_length)\n",
+    "plt.figure(figsize=(12, 2))\n",
+    "plt.step(\n",
+    "    np.concatenate(((0, 0), np.cumsum(region_lengths * repeats))),\n",
+    "    np.concatenate(((0, 1), np.arange(len(region_lengths) * repeats) % 2 == 0)),\n",
+    "    where=\"pre\",\n",
+    ")\n",
+    "y = 56\n",
+    "plt.plot([0, y, y, y + fov, y + fov], [0, 0, 0.5, 0.5, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for start_region in range(num_regions, 2):\n",
+    "    region = start_region\n",
+    "    position = 0\n",
+    "    while True:\n",
+    "        if position + region_lengths[region] <= fov:\n",
+    "            position += region_lengths[region]\n",
+    "            region = (region + 1) % num_regions\n",
+    "        else:\n",
+    "            fovs.append(dict(margin=))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# start in every inactive region (even region)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{\"margin\": 30, \"start_region\": 0, \"end_region\": 0}"
    ]
   }
  ],
