[shenker/snakenbake] Use absolute imports.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Basilisk.ipynb
@@ -38,8 +38,8 @@
    },
    "outputs": [],
    "source": [
-    "import snakenbake as s\n",
-    "import fov\n",
+    "import paulssonlab.shenker.snakenbake as s\n",
+    "import paulssonlab.shenker.snakenbake\n",
     "import fluid\n",
     "import text\n",
     "import geometry\n",
